--- a/03_lesson_starter/css/style.css
+++ b/03_lesson_starter/css/style.css
@@ -2,4 +2,10 @@ body {
     font-size: 22px;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
+    background-color: #d89730;
+    color: #333;
+}
+
+p{
+    color: #ffffff;
 }
